tests/invalid/missing-encryption-method.pskcxml
<?xml version="1.0" encoding="UTF-8"?>

<!--
  Based on the Figure 6 example, this file is missing the EncryptionMethod
  element in both the encrypted value and the MAC key definition.
-->

<KeyContainer Version="1.0"
  xmlns="urn:ietf:params:xml:ns:keyprov:pskc"
  xmlns:ds="http://www.w3.org/2000/09/xmldsig#"
  xmlns:xenc="http://www.w3.org/2001/04/xmlenc#">
  <EncryptionKey>
    <ds:KeyName>Pre-shared-key</ds:KeyName>
  </EncryptionKey>
  <MACMethod Algorithm="http://www.w3.org/2000/09/xmldsig#hmac-sha1">
    <MACKey>
    </MACKey>
  </MACMethod>
  <KeyPackage>
    <Key Id="45678901" Algorithm="urn:ietf:params:xml:ns:keyprov:pskc:hotp">
      <Data>
        <Secret>
          <EncryptedValue>
            <xenc:CipherData>
              <xenc:CipherValue>AAECAwQFBgcICQoLDA0OD+cIHItlB3Wra1DUpxVvOx2lef1VmNPCMl8jwZqIUqGv</xenc:CipherValue>
            </xenc:CipherData>
          </EncryptedValue>
        </Secret>
      </Data>
    </Key>
  </KeyPackage>
</KeyContainer>
